--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <repositories>
         <!-- jhipster-needle-maven-repository -->
+        <!-- testing travis ci -->
     </repositories>
 
     <pluginRepositories>
